--- a/src/components/Calc/calc.css
+++ b/src/components/Calc/calc.css
@@ -6,46 +6,45 @@ body {
     margin: 0;
   }
   
-
-.calculator {
+  .calculator {
     width: 300px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    background: #f9f9f9;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 1.5);
+    background: #000;
+    color: #fff;
   }
   
-  .input,
-  .result {
-    font-size: 1.8em;
+  .display {
+    font-size: 2.0em;
     margin-bottom: 10px;
-    background: #fff;
-    padding: 10px;
+    background: #000;
+    padding: 28px;
     border: 1px solid #ccc;
     border-radius: 5px;
-  }
-  
-  .result {
-    color: #555;
+    text-align: right;
   }
   
   .buttons {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
+    color: #fff;
   }
   
   button {
-    font-size: 1.5em;
+    font-size: 1.8em;
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
     cursor: pointer;
     transition: background 0.3s, color 0.3s;
+    background: #8e44ad; 
+    color: #fff; 
   }
   
   button:hover {
-    background: #eee;
+    background: #6c3483;
   }
   
